Backend: Style: Fix missing border on property editor.

--- a/modules/backend/include/property_editor.less
+++ b/modules/backend/include/property_editor.less
@@ -8,6 +8,7 @@
 
 div.window div.property-editor,
 div.dialog div.property-editor {
+	display: inline-block;
 	border: 1px solid @color_input_border;
 	border-radius: @input_radius;
 	background-color: @color_input_background;
